src/test/ui/wf/hir-wf-check-erase-regions.stderr
error[E0277]: `&T` cannot be converted to an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:7:21
   |
LL |     type IntoIter = std::iter::Flatten<std::slice::Iter<'a, T>>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&T` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `&T`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL
   |
LL | pub struct Flatten<I: Iterator<Item: IntoIterator>> {
   |                                      ^^^^^^^^^^^^ required by this bound in `Flatten`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<'a, T, const N: usize> IntoIterator for &'a Table<T, N> where &T: IntoIterator {
   |                                                              ++++++++++++++++++++++

error[E0277]: `&T` cannot be converted to an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:10:27
   |
LL |     fn into_iter(self) -> Self::IntoIter {
   |                           ^^^^^^^^^^^^^^ `&T` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `&T`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL
   |
LL | pub struct Flatten<I: Iterator<Item: IntoIterator>> {
   |                                      ^^^^^^^^^^^^ required by this bound in `Flatten`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<'a, T, const N: usize> IntoIterator for &'a Table<T, N> where &T: IntoIterator {
   |                                                              ++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
